fix horizontal scrolling on mobile

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,7 +1,8 @@
 .app {
     background-color: #FFEE2C;
     height: auto;
-    width: 100%;
+    max-width: 100%;
+    overflow: hidden;
     &__main {
         height: auto;
         min-height: max-content;
